ligolang/src/test/contracts/negative/vars_consts/assign_consts.jsligo
let x = (z: int): int => {
  const [x, y] = [4, 5];
  x = 1;
  return (x + y + z);
};
